BUG 4367 功能问题】【发表评论】发表评论是，断网，显示errror

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_create.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_create.html
@@ -255,7 +255,7 @@ $(document).ready(function(){
                     $textarea.val('');
                 },
                 error: function(data){
-                    alert('error');
+                    alert('没有可连接的网络');
                     return ;
                 },
             });
@@ -305,7 +305,7 @@ $(document).ready(function(){
                     }, 50)
                 },
                 error: function(data){
-                    alert('error');
+                    alert('没有可连接的网络');
                     return ;
                 },
             });
