--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_update.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_update.html
@@ -94,7 +94,7 @@ $(document).ready(function(){
                     }, 500)
                 },
                 error: function(data){
-                    alert('error');
+                    alert('没有可连接的网络');
                     return ;
                 },
             });
