--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -143,7 +143,7 @@
             //更新中奖历史
             var newRecord = data.newRecord;
             if(!$.isEmptyObject(newRecord)){
-                var new_str = "<li>" + newRecord.prize_title+'  '+ newRecord.prize_name+ '  '+ newRecord.created_at;
+                var new_str = "<li>" + newRecord.created_at+'  '+ newRecord.prize_title+ '  '+ newRecord.prize_name;
                 $('.wui-i-record').find('.xa-recordData').find('p').remove();
                 $('.wui-i-record').find('.xa-recordData').prepend(new_str);
             }
