BUG 4375 【商品管理】-【属性规格管理】-创建规格值-上传图片时，图片名称过长只显示图片名一半信息

--- a/weapp/mall/templates/mall/editor/model_properties.html
+++ b/weapp/mall/templates/mall/editor/model_properties.html
@@ -4,6 +4,9 @@
 #mallAddProductModelPropertyValueDialog .modal-content{
     overflow: hidden;
 }
+#mallAddProductModelPropertyValueDialog .uploadify-queue-item{
+    max-width: 150px;
+}
 </style>
 {% endblock%}
 {% block content-panel %}
