--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -113,7 +113,7 @@
     class="wui-surveyDescription xa-prizeContainer"
     style="min-height:100px; background-color:#8d00ab;"
 >
-    <div class="wui-i-subtitle">
+    <div class="wui-i-subtitle" style="background-color: #8d00ab;left: 35%;position: relative;text-align: center;top: 10px;width: 30%;">
         <h2 class=" xa-subtitle" style="font-weight: 700;color: #ffffff;">活动说明</h2>
     </div>
 	<div class="wui-i-info p0">
