BUG 4377 【手机端-商品列表页】-有会员价的商品，价格显示小数点后两位，没有会员价的商品不显示小数

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -82,7 +82,7 @@ $(document).ready(function() {
             }
             $(".xa-product").each(function(){
                 // 商品原价
-                var price = $(this).data('product-price');
+                var price = $(this).data('product-price').toFixed(2);
                 // 商品有促销
                 var product_promotion = $(this).data('product-promotion')
                 var is_user_has_promotion = false;
