--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -124,36 +124,36 @@
                     <li data_cid="4">
                         一等奖:&nbsp;&nbsp;
                         {% if component.components.0.model.prize.type == 'coupon' %}
-                            <p style="display: inline;font-size: 13px;">{{component.components.0.model.prize.data.name}}</p>
+                            <p>{{component.components.0.model.prize.data.name}}</p>
                         {% else %}
                             {% if component.components.0.model.prize.type == 'integral' %}
-                                <p style="display: inline;font-size: 13px;">{{component.components.0.model.prize.data}}</P>&nbsp;积分
+                                <p>{{component.components.0.model.prize.data}}</P>&nbsp;积分
                             {% else %}
-                                <p style="display: inline;font-size: 13px;">{{component.components.0.model.prize.data}}</P>
+                                <p>{{component.components.0.model.prize.data}}</P>
                             {% endif %}
                         {% endif %}
                     </li>
                     <li data_cid="5">
                         二等奖:&nbsp;&nbsp;
                         {% if component.components.1.model.prize.type == 'coupon' %}
-                            <p style="display: inline;font-size: 13px;">{{component.components.1.model.prize.data.name}}</p>
+                            <p>{{component.components.1.model.prize.data.name}}</p>
                         {% else %}
                             {% if component.components.1.model.prize.type == 'integral' %}
-                                <p style="display: inline;font-size: 13px;">{{component.components.1.model.prize.data}}</P>&nbsp;积分
+                                <p>{{component.components.1.model.prize.data}}</P>&nbsp;积分
                             {% else %}
-                                <p style="display: inline;font-size: 13px;">{{component.components.1.model.prize.data}}</P>
+                                <p>{{component.components.1.model.prize.data}}</P>
                             {% endif %}
                         {% endif %}
                     </li>
                     <li data_cid="6" >
                         三等奖:&nbsp;&nbsp;
                         {% if component.components.2.model.prize.type == 'coupon' %}
-                            <p style="display: inline;font-size: 13px;">{{component.components.2.model.prize.data.name}}</p>
+                            <p>{{component.components.2.model.prize.data.name}}</p>
                         {% else %}
                             {% if component.components.2.model.prize.type == 'integral' %}
-                                <p style="display: inline;font-size: 13px;">{{component.components.2.model.prize.data}}</P>&nbsp;积分
+                                <p>{{component.components.2.model.prize.data}}</P>&nbsp;积分
                             {% else %}
-                                <p style="display: inline;font-size: 13px;">{{component.components.2.model.prize.data}}</P>
+                                <p>{{component.components.2.model.prize.data}}</P>
                             {% endif %}
                         {% endif %}
                     </li>
