修改bug完成需求

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -38,12 +38,12 @@
 				   	<ul class="dropdown-menu xui-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
 					    <li class="dropdown-submenu">
 					    	<a class="xa-send-message-select-member" type="button"  href="javascript:void(0);">
-								给选中的人发消息（已跑路除外）</span>
+								给选中的人发消息（已取消关注除外）</span>
 						   	</a>
 					    </li>
 					    <li class="dropdown-submenu">
 					    	<a class=" xa-send-message-all-member"  type="button"  href="javascript:void(0);" >
-								给筛选出来的所有人发消息（已跑路除外）</span>
+								给筛选出来的所有人发消息（已取消关注除外）</span>
 						   	</a>
 					    </li>
 					</ul>
@@ -113,12 +113,12 @@
 				   	<ul class="dropdown-menu xui-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
 					    <li class="dropdown-submenu">
 					    	<a class=" xa-select-member" type="button"  href="javascript:void(0);">
-								给选中的人发优惠券（已跑路除外）</span>
+								给选中的人发优惠券（已取消关注除外）</span>
 						   	</a>
 					    </li>
 					    <li class="dropdown-submenu">
 					    	<a class=" xa-all-member"  type="button"  href="javascript:void(0);" >
-								给筛选出来的所有人发优惠券（已跑路除外）</span>
+								给筛选出来的所有人发优惠券（已取消关注除外）</span>
 						   	</a>
 					    </li>
 					</ul>
@@ -153,12 +153,12 @@
 				   	<ul class="dropdown-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
 					    <li class="dropdown-submenu">
 					    	<a class="xa-send-message-select-member" type="button"  href="javascript:void(0);">
-								给选中的人发消息（已跑路除外）</span>
+								给选中的人发消息（已取消关注除外）</span>
 						   	</a>
 					    </li>
 					    <li class="dropdown-submenu">
 					    	<a class="xa-send-message-all-member"  type="button"  href="javascript:void(0);" >
-								给筛选出来的所有人发消息（已跑路除外）</span>
+								给筛选出来的所有人发消息（已取消关注除外）</span>
 						   	</a>
 					    </li>
 					</ul>
@@ -227,12 +227,12 @@
 				   	<ul class="dropdown-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
 					    <li class="dropdown-submenu">
 					    	<a class="xa-select-member" type="button"  href="javascript:void(0);">
-								给选中的人发优惠券（已跑路除外）</span>
+								给选中的人发优惠券（已取消关注除外）</span>
 						   	</a>
 					    </li>
 					    <li class="dropdown-submenu">
 					    	<a class="xa-all-member"  type="button"  href="javascript:void(0);" >
-								给筛选出来的所有人发优惠券（已跑路除外）</span>
+								给筛选出来的所有人发优惠券（已取消关注除外）</span>
 						   	</a>
 					    </li>
 					</ul>
@@ -272,7 +272,7 @@
 			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_money' >消费总额</th>
 			<th  class="tx_sortable xui-Blue" style="width:9%" data-sort-attr='unit_price' >客单价</th>
 			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_times' >购买次数</th>
-			
+
 			<th  class="tx_sortable xui-Blue" style="width:14%" data-sort-attr='created_at' data-init-sort="-created_at"  data-sort-direction="down">关注时间&来源 </th>
 			<th  style="width:10%">分组</th>
 
