--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -51,7 +51,7 @@
 				<div class="xui-fieldwrap">
 				    <div class="xui-name ">姓名：</div>
 	        			<div class="xui-value">
-	        			<input class="form-control fl" type="text" id="name" name="name" placeholder="不超过8个字符" value="{% if show_member_info %}{{ show_member_info.name }}{% endif %}" />
+	        			<input class="form-control fl" type="text" id="name" name="name" placeholder="不超过8个字符" maxlength="8" value="{% if show_member_info %}{{ show_member_info.name }}{% endif %}" />
 	        			<button class="xui-unknow fr">?</button>
 						</div>
 
@@ -67,7 +67,8 @@
 
 				<div class="xui-fieldwrap">
 	        		<div class="xui-name">绑定手机：</div>
-	        		<div class="xui-value "><input  class="form-control" id="phone_number" value="{{show_member_info.phone_number}}"  type="text">
+	        		<div class="xui-value "><input  class="form-control" id="phone_number" value="{{show_member_info.phone_number}}"  type="text" data-validate="require-mobile-phone::请输入正确的手机号" placeholder="11位手机号">
+	        		<div class="errorHint"></div>
 	        		</div>
 	        		<div class="xui-name">上次交易时间：</div>
 	        		<div class="xui-value">{{ show_member.last_pay_time|unify_datetime }}</div>
@@ -490,6 +491,7 @@
 					tag_ids: tag_ids.join('_')
 				},
 				success: function(data) {
+					W.showHint('success','保存成功！');
                 	window.location.reload();
                 },
                 error: function(resp) {
