--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -42,6 +42,17 @@
 				</select>
 					</div>
 				</div>
+				<div class="xui-row">
+					<div class="xui-i-left fl lh1">添加到分组： </div>
+					<div class="fl mt20 ml10">
+						<select class="ml10 w120" name="tag_id" id="tag_id" data-validate="require-select">
+						<option value="-1">未分组</option>
+						{% for tag in tags %}
+							<option value="{{tag.id}}"{% if qrcode.tag_id == tag.id %}selected="selected"{% endif%}>{{tag.name}}</option>
+						{% endfor %}
+						</select>
+					</div>
+				</div>
 				<div class="xui-row" style="border-bottom: none;border-top:none;">
 					<div class="xui-i-left fl lh1"> 已关注会员可参与： </div>
 					<div class=" fl mt18 ml20">
