商品列表商品价格两位小数

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -37,7 +37,7 @@
                             <img src="{{ product.thumbnails_url }}">
                         </div>
                         <h3 class="xt-productName">{{ product.name|truncatechars:16 }}</h3>
-                        <p class="xt-productPrice">￥{{ product.display_price }}</p>
+                        <p class="xt-productPrice">￥{{ product.display_price | floatformat:2}}</p>
 
                     </a>
                 </li>
