fix lottery problems

--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -163,8 +163,8 @@
           var descriptionModel = page.components[0].model;
             var dynamicComponents = page.components[0].components;
           var name = descriptionModel.get('title');
-          var startTime = descriptionModel.get('start_time')+":00";
-          var endTime = descriptionModel.get('end_time')+":00";
+          var startTime = descriptionModel.get('start_time');
+          var endTime = descriptionModel.get('end_time');
           var expend = descriptionModel.get('expend');
           var delivery = descriptionModel.get('delivery');
           var delivery_setting = descriptionModel.get('delivery_setting');
