--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -394,40 +394,47 @@
                             'url': 'm/apps/'+W.appName+'/result_vote/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&member_id={{ member_id }}'
                         }]);
                     }
-{#                        必须关注才可以参与的活动#}
-                    if (W.permission == 'member'){
-                        if (W.isMember == true){
-                            W.getApi().call({
-                                app: 'm/apps/'+W.appName,
-                                resource: W.resource+'_participance',
-                                method: 'put',
-                                args: participanceData,
-                                success: function(data) {
-                                    $('body').alertParticipantResult({prize: data.prize,actionButtons: data.actionButtons});
-                                    var $button = $submitButtonContainer.find('.xa-submitTermite');
-                                    $button.text('您已参加过该活动');
-                                    $('.xa-submitTermite').unbind('click');
-                                    $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
-                                    },
-                                error: function(resp) {
-                                    $('body').alert({
-                                        isShow: true,
-                                        isSlide: true,
-                                        info: '参与失败，请稍后再试！',
-                                        speed: 3000,
-                                    });
-                                }
-                            });
-                        }else{
+                    //必须关注才可以参与的活动
+                    if (W.permission == 'member') {
+                        if (W.isMember == true) {
+                            getParticipance();
+
+                        } else {
                             $('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
-                            '<img height="195px" width="195px" src="'+ W.qrcodeUrl+'">' +
-                            '</div><div></div>');
+                                    '<img height="205px" width="205px" src="' + W.qrcodeUrl + '">' +
+                                    '</div><div></div>');
                         }
+                    }
+                    else{
+                        getParticipance();
                     }
 
                 });
                 }
             });
+        function getParticipance(){
+            W.getApi().call({
+                app: 'm/apps/'+W.appName,
+                resource: W.resource+'_participance',
+                method: 'put',
+                args: participanceData,
+                success: function(data) {
+                    $('body').alertParticipantResult({prize: data.prize,actionButtons: data.actionButtons});
+                    var $button = $submitButtonContainer.find('.xa-submitTermite');
+                    $button.text('您已参加过该活动');
+                    $('.xa-submitTermite').unbind('click');
+                    $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
+                    },
+                error: function(resp) {
+                    $('body').alert({
+                        isShow: true,
+                        isSlide: true,
+                        info: '参与失败，请稍后再试！',
+                        speed: 3000,
+                    });
+                }
+            });
+        }
         </script>
 
         {% if under_develop %}
