--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -356,7 +356,7 @@ p.wui-i-start_time,p.wui-i-end_time{
     margin-left: 7px;
 	font-weight: 300;
 }
-.wui-i-settingData.xa-settingData p {
+.wui-i-settingData p {
   display: inline;
   font-size: 16px;
 }
