--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -139,7 +139,7 @@
                             <p>{{component.components.1.model.prize.data.name}}</p>
                         {% else %}
                             {% if component.components.1.model.prize.type == 'integral' %}
-                                <p>{{component.components.1.model.prize.data}}</P>&nbsp;积分
+                                <p>{{component.components.1.model.prize.data}}&nbsp;积分</P>
                             {% else %}
                                 <p>{{component.components.1.model.prize.data}}</P>
                             {% endif %}
