--- a/weapp/static_v2/js/view/apps_prize_selector_v3/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v3/template.html
@@ -5,13 +5,12 @@
 		<option value="coupon" {{#ifCond prize.type '===' 'coupon'}}selected{{/ifCond}}>优惠券</option>
 		<option value="entity" {{#ifCond prize.type '===' 'entity'}}selected{{/ifCond}}>实物</option>
 	</select>
-
-	<input 
-		type="text" 
-		class="xui-propertyGroup-input xa-optionTarget {{#ifCond prize.type '!==' 'integral'}}xui-hide{{/ifCond}} xa-integral" 
-		name="integral" 
+	<input
+		type="text"
+		class="xui-propertyGroup-input xa-optionTarget {{#ifCond prize.type '!==' 'integral'}}xui-hide{{/ifCond}} xa-integral"
+		name="integral"
 		data-target="integral"
-		placeholder="输入奖励积分值" 
+		placeholder="输入奖励积分值"
 		data-validate="require-notempty::不能为空,,require-nonnegative::输入0或整数积分值"
 		{{#if prize.data}}value="{{prize.data}}"{{/if}} />
 
@@ -23,23 +22,26 @@
 
 		<a href="javascript:void(0);" class="xa-selectCoupon ml5">修改</a>
 	</div>
+	<div style="display:inline">
+		<input
+			type="text"
+			class="xui-propertyGroup-input xa-optionTarget {{#ifCond prize.type '!==' 'entity'}}xui-hide{{/ifCond}} xa-entity"
+			name="entity"
+			data-target="entity"
+			placeholder="输入实物名称"
+			data-validate="require-notempty::实物名称不能为空"
+			{{#if prize.data}}value="{{prize.data}}"{{/if}} />
+		<div class="errorHint" style="margin-left: 37%;"></div>
+	</div>
 
-	<input
-		type="text"
-		class="xui-propertyGroup-input xa-optionTarget {{#ifCond prize.type '!==' 'entity'}}xui-hide{{/ifCond}} xa-entity"
-		name="entity"
-		data-target="entity"
-		placeholder="输入实物名称"
-		data-validate="require-notempty::实物名称不能为空"
-		{{#if prize.data}}value="{{prize.data}}"{{/if}} />
-
-	<a
-		href="javascript:void(0);"
-		class="xui-hide xa-optionTarget ml5 xa-selectCoupon"
-		data-target="coupon"
-	>
-		请选择优惠券
-	</a>
+	<div class="coupon_div xa-optionTarget xa-selectCoupon" data-target="coupon" style="display:none">
+		<a
+			href="javascript:void(0);"
+			class="xui-hide ml5 xa-selectCoupon"
+		>请选择优惠券	</a>
+		<input style="width:0;background:#F9F9F9;border:0" type="text" data-validate="require-notempty::请选择一张优惠券" />
+		<div class="errorHint" style="margin-left: 58%;width: 100px;"></div>
+	</div>
 	<div class="errorHint" style="margin-left: 37%;"></div>
 </div>
 </script>
