--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -338,104 +338,105 @@
                 }
                 else{
                     $('.xa-submitTermite').click(function() {
-                    if (!W.validate()) {
-                        return;
-                    }
-                    var data = {};
-                    var $controls = $('.xa-inputControl');
-                    for (var i = 0; i < $controls.length; ++i) {
-                        var $control = $controls.eq(i);
-                        var inputType = $control.attr('data-input-type');
-                        var controlType = $control.attr('data-control-type');
-                        var name = $control.attr('data-input-name');
-                        var cid = i.toString();
-                        cid = cid.length<2 ? '0'+cid : cid;
-                        name = cid+'_'+name;
-                        if (inputType === 'text') {
-                            var value = $.trim($control.find('input[type="text"]').val());
-                        } else if (inputType === 'textarea') {
-                            var value = $.trim($control.find('textarea').val());
-                        } else if (inputType === 'selection') {
-                            var $inputs = $control.find('input');
-                            var value = {};
-                            var selectionInputType = $inputs.eq(0).attr('type');
-                            for (var j = 0; j < $inputs.length; ++j) {
-                                var $input = $inputs.eq(j);
-                                var selectionCid = $input.parents('li').eq(0).attr('data-component-cid');
-                                selectionCid = selectionCid.length<2 ? '0'+selectionCid : selectionCid;
-                                var selectionInputName = $input.attr('data-input-name');
-                                selectionInputName = selectionCid+'_'+selectionInputName;
-                                var isSelect = $input.is(':checked');
-                                value[selectionInputName] = {
-                                    type: selectionInputType,
-                                    isSelect: isSelect
-                                };
+                        if (!W.validate()) {
+                            return;
+                        }
+                        var data = {};
+                        var $controls = $('.xa-inputControl');
+                        for (var i = 0; i < $controls.length; ++i) {
+                            var $control = $controls.eq(i);
+                            var inputType = $control.attr('data-input-type');
+                            var controlType = $control.attr('data-control-type');
+                            var name = $control.attr('data-input-name');
+                            var cid = i.toString();
+                            cid = cid.length<2 ? '0'+cid : cid;
+                            name = cid+'_'+name;
+                            if (inputType === 'text') {
+                                var value = $.trim($control.find('input[type="text"]').val());
+                            } else if (inputType === 'textarea') {
+                                var value = $.trim($control.find('textarea').val());
+                            } else if (inputType === 'selection') {
+                                var $inputs = $control.find('input');
+                                var value = {};
+                                var selectionInputType = $inputs.eq(0).attr('type');
+                                for (var j = 0; j < $inputs.length; ++j) {
+                                    var $input = $inputs.eq(j);
+                                    var selectionCid = $input.parents('li').eq(0).attr('data-component-cid');
+                                    selectionCid = selectionCid.length<2 ? '0'+selectionCid : selectionCid;
+                                    var selectionInputName = $input.attr('data-input-name');
+                                    selectionInputName = selectionCid+'_'+selectionInputName;
+                                    var isSelect = $input.is(':checked');
+                                    value[selectionInputName] = {
+                                        type: selectionInputType,
+                                        isSelect: isSelect
+                                    };
+                                }
+                            }
+                            data[name] = {
+                                type: controlType,
+                                value: value
+                            };
+                        };
+                        participanceData = {
+                            webapp_owner_id: W.webappOwnerId,
+                            belong_to: W.appRecordId,
+                            termite_data: JSON.stringify(data)
+                        }
+                        var $prizeContainer = $('.xa-prizeContainer');
+                        if ($prizeContainer.length > 0) {
+                            $prizeContainer = $prizeContainer.eq(0);
+                            participanceData['prize'] = $prizeContainer.attr('data-prize');
+                        }
+                        var $textSelection = $('.wui-textSelection');
+                        if ($textSelection.length > 0){
+                            participanceData['actionButtons'] = JSON.stringify([{
+                                'text': '查看结果',
+                                'url': 'm/apps/'+W.appName+'/result_vote/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&member_id={{ member_id }}'
+                            }]);
+                        }
+                        //必须关注才可以参与的活动
+                        if (W.permission == 'member') {
+                            console.log("member");
+                            if (W.isMember == true) {
+                                getParticipance();
+
+                            } else {
+                                $('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
+                                        '<img height="205px" width="205px" src="' + W.qrcodeUrl + '">' +
+                                        '</div><div></div>');
                             }
                         }
-                        data[name] = {
-                            type: controlType,
-                            value: value
-                        };
-                    };
-                    W.participanceData = {
-                        webapp_owner_id: W.webappOwnerId,
-                        belong_to: W.appRecordId,
-                        termite_data: JSON.stringify(data)
-                    }
-                    var $prizeContainer = $('.xa-prizeContainer');
-                    if ($prizeContainer.length > 0) {
-                        $prizeContainer = $prizeContainer.eq(0);
-                        participanceData['prize'] = $prizeContainer.attr('data-prize');
-                    }
-                    var $textSelection = $('.wui-textSelection');
-                    if ($textSelection.length > 0){
-                        participanceData['actionButtons'] = JSON.stringify([{
-                            'text': '查看结果',
-                            'url': 'm/apps/'+W.appName+'/result_vote/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&member_id={{ member_id }}'
-                        }]);
-                    }
-                    //必须关注才可以参与的活动
-                    if (W.permission == 'member') {
-                        console.log("member");
-                        if (W.isMember == true) {
+                        else{
                             getParticipance();
-
-                        } else {
-                            $('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
-                                    '<img height="205px" width="205px" src="' + W.qrcodeUrl + '">' +
-                                    '</div><div></div>');
                         }
-                    }
-                    else{
-                        getParticipance();
-                    }
 
-                });
+                    });
                 }
-            });
-        function getParticipance(){
-            W.getApi().call({
-                app: 'm/apps/'+W.appName,
-                resource: W.resource+'_participance',
-                method: 'put',
-                args: W.participanceData,
-                success: function(data) {
-                    $('body').alertParticipantResult({prize: data.prize,actionButtons: data.actionButtons});
-                    var $button = $submitButtonContainer.find('.xa-submitTermite');
-                    $button.text('您已参加过该活动');
-                    $('.xa-submitTermite').unbind('click');
-                    $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
-                    },
-                error: function(resp) {
-                    $('body').alert({
-                        isShow: true,
-                        isSlide: true,
-                        info: '参与失败，请稍后再试！',
-                        speed: 3000,
+                function getParticipance(){
+                    W.getApi().call({
+                        app: 'm/apps/'+W.appName,
+                        resource: W.resource+'_participance',
+                        method: 'put',
+                        args: participanceData,
+                        success: function(data) {
+                            $('body').alertParticipantResult({prize: data.prize,actionButtons: data.actionButtons});
+                            var $button = $submitButtonContainer.find('.xa-submitTermite');
+                            $button.text('您已参加过该活动');
+                            $('.xa-submitTermite').unbind('click');
+                            $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
+                            },
+                        error: function(resp) {
+                            $('body').alert({
+                                isShow: true,
+                                isSlide: true,
+                                info: '参与失败，请稍后再试！',
+                                speed: 3000,
+                            });
+                        }
                     });
                 }
             });
-        }
+
         </script>
 
         {% if under_develop %}
