--- a/weapp/static_v2/js/view/apps_prize_selector_v3/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v3/template.html
@@ -22,22 +22,21 @@
 
 		<a href="javascript:void(0);" class="xa-selectCoupon ml5">修改</a>
 	</div>
-	<div style="display:inline">
+	<div class="xa-optionTarget {{#ifCond prize.type '!==' 'entity'}}xui-hide{{/ifCond}}" data-target="entity" {{#ifCond prize.type '==' 'entity'}}style="display:inline"{{/ifCond}}">
 		<input
 			type="text"
-			class="xui-propertyGroup-input xa-optionTarget {{#ifCond prize.type '!==' 'entity'}}xui-hide{{/ifCond}} xa-entity"
+			class="xui-propertyGroup-input xa-entity"
 			name="entity"
-			data-target="entity"
 			placeholder="输入实物名称"
 			data-validate="require-notempty::实物名称不能为空"
 			{{#if prize.data}}value="{{prize.data}}"{{/if}} />
 		<div class="errorHint" style="margin-left: 37%;"></div>
 	</div>
 
-	<div class="coupon_div xa-optionTarget xa-selectCoupon" data-target="coupon" style="display:none">
+	<div class="coupon_div xa-optionTarget xa-selectCoupon xui-hide" data-target="coupon" style="display:none">
 		<a
 			href="javascript:void(0);"
-			class="xui-hide ml5 xa-selectCoupon"
+			class="ml5"
 		>请选择优惠券	</a>
 		<input style="width:0;background:#F9F9F9;border:0" type="text" data-validate="require-notempty::请选择一张优惠券" />
 		<div class="errorHint" style="margin-left: 58%;width: 100px;"></div>
