--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -127,7 +127,7 @@
                             <p>{{component.components.0.model.prize.data.name}}</p>
                         {% else %}
                             {% if component.components.0.model.prize.type == 'integral' %}
-                                <p>{{component.components.0.model.prize.data}}</P>&nbsp;积分
+                                <p>{{component.components.0.model.prize.data}}&nbsp;积分</P>
                             {% else %}
                                 <p>{{component.components.0.model.prize.data}}</P>
                             {% endif %}
@@ -151,7 +151,7 @@
                             <p>{{component.components.2.model.prize.data.name}}</p>
                         {% else %}
                             {% if component.components.2.model.prize.type == 'integral' %}
-                                <p>{{component.components.2.model.prize.data}}</P>&nbsp;积分
+                                <p>{{component.components.2.model.prize.data}}&nbsp;积分</P>
                             {% else %}
                                 <p>{{component.components.2.model.prize.data}}</P>
                             {% endif %}
